--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.3",
+    "@types/lodash": "^4.17.16",
     "bootstrap-icons": "^1.11.3",
+    "lodash": "^4.17.21",
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
