--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-tabs": "^1.1.9",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/lodash": "^4.17.16",
